SonarQube batch 1